Remove clipping issue on apply button

--- a/src/Styles/popup.css
+++ b/src/Styles/popup.css
@@ -174,6 +174,7 @@ input[type=submit] {
 }
 
 .action-buttons {
+    padding: 0 10px;
     display: flex;
     justify-content: flex-end;
     flex-grow: 1;
@@ -192,8 +193,8 @@ input[type="text"].input-error {
 
 @keyframes shake {
     0%, 100% { transform: translateX(0); }
-    10%, 30%, 50%, 70%, 90% { transform: translateX(-5px); }
-    20%, 40%, 60%, 80% { transform: translateX(5px); }
+    10%, 30%, 50%, 70%, 90% { transform: translateX(-4px); }
+    20%, 40%, 60%, 80% { transform: translateX(4px); }
 }
 
 #errorMessage {
